New changes Added button for selection sort

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>      
                 <button id="btn_bubble" class="nav_btn">Bubble sort</button>
                 <button id="btn_insertion" class="nav_btn">Insertion sort</button>
+                <button id="btn_selection" class="nav_btn">Selection sort</button>
         </nav>
         <div id="graph" class="graph"></div>
     </div>
