New update Added heap sort button

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <nav class="nav">
             <div class="nav_div">
                 <label for="array_item_count">Array size</label>
-                <input type= "range" name="array_item_count" id="arr_size_input" min="10" max="300" oninput="this.nextElementSibling.value = this.value">
-                <output>150</output>
+                <input type= "range" name="array_item_count" id="arr_size_input" min="10" max="400" oninput="this.nextElementSibling.value = this.value">
+                <output>200</output>
             </div>
             <div class="nav_div">
                 <label for="sort_speed">Delay [ms]</label>
@@ -25,6 +25,7 @@
                 <button id="btn_insertion" class="nav_btn">Insertion sort</button>
                 <button id="btn_selection" class="nav_btn">Selection sort</button>
                 <button id="btn_quick" class="nav_btn">Quick sort</button>
+                <button id="btn_heap" class="nav_btn">Heap sort</button>
             </nav>
         <div id="graph" class="graph"></div>
     </div>
