--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
             <div class="nav_div">
                 <label for="sort_speed">Delay [ms]</label>
-                <input type="range" name="sort_speed" id="arr_speed_input" min="5" max="300" oninput="this.nextElementSibling.value = this.value">
-                <output>150</output>
+                <input type="range" name="sort_speed" id="arr_speed_input" min="5" max="150" oninput="this.nextElementSibling.value = this.value">
+                <output>75</output>
             </div>      
                 <button id="btn_bubble" class="nav_btn">Bubble sort</button>
                 <button id="btn_insertion" class="nav_btn">Insertion sort</button>
@@ -28,6 +28,7 @@
                 <button id="btn_heap" class="nav_btn">Heap sort</button>
             </nav>
         <div id="graph" class="graph"></div>
+        <h2 class="info">App is designed for minimum width of 850 pixels.</h2>
     </div>
     <script src="./scripts/main.js"></script>
 </body>
